--- a/assets/style/foptimal.css
+++ b/assets/style/foptimal.css
@@ -5,7 +5,7 @@
                                             width: 100% !important;
                                             height: auto !important;
                                             margin: 0;
-                                            padding: 0;
+                                            padding: 0 !important;
                                         }
                                         
                                         .container-fruid {
@@ -15,6 +15,7 @@
                                             padding: auto;
                                             overflow: hidden;
                                             align-items: center !important;
+                                            padding: 0 !important;
                                         }
                                         
                                         .container .row {
@@ -26,7 +27,6 @@
                                         footer {
                                             width: 100% !important;
                                             margin-top: 70px;
-                                            height: auto;
                                             align-items: center !important;
                                         }
                                         
@@ -43,11 +43,11 @@
                                         /*============================START NAVIGATION===================== */
                                         
                                         header {
-                                            margin: 0;
-                                            padding: 0;
-                                            max-width: 100%;
+                                            /* margin: 0;
+                                            padding: 0; */
+                                            width: 100%;
                                             height: 752px;
-                                            background-image: linear-gradient( to bottom, rgba(49, 49, 49, 0.2), rgba(49, 49, 49, 0.2), rgba(49, 49, 49, 0.), #1C1C1C), url("../images/Hero background.svg");
+                                            background-image: linear-gradient( to bottom, rgba(49, 49, 49, 0.8), rgba(49, 49, 49, 0.8), rgba(49, 49, 49, 0.8), #1C1C1C), url("../images/Hero\ background.svg");
                                             background-repeat: no-repeat;
                                             background-size: cover;
                                             background-position: center center;
@@ -55,7 +55,7 @@
                                         }
                                         
                                         .view {
-                                            max-width: 100%;
+                                            width: 100%;
                                             height: 100%;
                                             margin: 0;
                                             padding: 0;
@@ -511,24 +511,15 @@
                                             z-index: 1;
                                             object-fit: cover;
                                         }
-                                        /* .text-left2 {
-                        margin-top: 117px !important;
-                        margin-left: 30px !important;
-                    }
-                     */
                                         
                                         .our__flex {
                                             width: 175px;
                                             height: 36px;
                                             margin-left: auto;
                                             margin-top: 27px !important;
-                                            /* margin-top: -90px; */
-                                            /* margin-left: 400px; */
                                             height: 36px;
                                             display: flex;
                                             align-items: center;
-                                            /* text-align: right; */
-                                            /* margin-left: 433px !important; */
                                         }
                                         
                                         .our {
@@ -554,13 +545,11 @@
                                             height: 114px;
                                             margin-left: auto;
                                             margin-top: 14px;
-                                            /* margin-top: 14px; */
                                         }
                                         
                                         .text-left__1 h2 {
                                             width: 572px !important;
                                             height: 114px !important;
-                                            /* margin-left: 36px; */
                                             font-family: ABeeZee;
                                             font-style: normal;
                                             font-weight: normal;
@@ -1239,7 +1228,6 @@
                                             width: 12px;
                                             height: 17px;
                                             margin-left: 143px;
-                                            /* margin-top: 30px; */
                                             font-family: Montserrat;
                                             font-style: normal;
                                             font-weight: normal;
