--- a/assets/style/responsive.css
+++ b/assets/style/responsive.css
@@ -826,23 +826,26 @@
                         width: 100%;
                         height: auto !important;
                         margin: 0;
-                        margin-top: 100px !important;
-                    }
-                    #container__row__column {
-                        width: 85%;
-                        height: auto !important;
-                        margin: 0;
+                        display: flex;
                         flex-wrap: wrap;
-                        justify-content: center
+                        margin-top: 100px !important;
+                        justify-content: center;
                     }
                     #foptimal {
-                        width: 10%;
-                        height: auto;
-                        margin-left: -100px !important;
+                        margin-left: 0px !important;
+                    }
+                    #about__jurnal {
+                        margin-left: 50px !important;
+                    }
+                    #service__work {
+                        margin-left: 50px !important;
+                    }
+                    #icon__boulevard {
+                        margin-left: 50px !important;
                     }
                     #getin__touch {
                         width: 50% !important;
-                        margin-left: 900px !important;
+                        margin-left: 720px !important;
                         margin-top: -70px !important;
                     }
                 }
@@ -1011,24 +1014,20 @@
                         width: 100%;
                         height: auto !important;
                         margin: 0;
-                        margin-top: 100px !important;
-                    }
-                    #container__row__column {
-                        width: 85%;
-                        height: auto !important;
-                        margin: 0;
+                        display: flex;
                         flex-wrap: wrap;
+                        margin-top: 100px !important;
                         justify-content: center;
-                        margin-left: -1000px !important
                     }
-                    #foptimal {
-                        width: 10%;
-                        height: auto;
-                        margin-left: -500px !important;
+                    #about__jurnal {
+                        margin-left: 100px !important;
+                    }
+                    #service__work {
+                        margin-left: 100px !important;
                     }
                     #getin__touch {
                         width: 50% !important;
-                        margin-left: 2000px !important;
+                        margin-left: 950px !important;
                         margin-top: -70px !important;
                     }
                 }
