--- a/assets/style/responsive.css
+++ b/assets/style/responsive.css
@@ -351,11 +351,17 @@
                         margin-top: 100px !important;
                         justify-content: center;
                     }
+                    #foptimal {
+                        margin-left: 250px !important;
+                    }
                     #about__jurnal {
-                        margin-left: 100px !important;
+                        margin-left: 30px !important;
                     }
                     #service__work {
-                        margin-left: 100px !important;
+                        margin-left: 30px !important;
+                    }
+                    #icon__boulevard {
+                        margin-left: 30px !important;
                     }
                     #getin__touch {
                         width: 50% !important;
@@ -620,24 +626,13 @@
                         width: 100%;
                         height: auto !important;
                         margin: 0;
-                        margin-top: 100px !important;
-                    }
-                    #container__row__column {
-                        width: 85%;
-                        height: auto !important;
-                        margin: 0;
+                        display: flex;
                         flex-wrap: wrap;
-                        justify-content: center
+                        margin-top: 100px !important;
+                        justify-content: center;
                     }
                     #foptimal {
-                        width: 10%;
-                        height: auto;
-                        margin-left: -100px !important;
-                    }
-                    #getin__touch {
-                        width: 50% !important;
-                        margin-left: 600px !important;
-                        margin-top: -70px !important;
+                        margin-left: 10px !important;
                     }
                 }
                 
@@ -820,21 +815,7 @@
                         justify-content: center;
                     }
                     #foptimal {
-                        margin-left: -500px !important;
-                    }
-                    #about__jurnal {
-                        margin-left: 50px !important;
-                    }
-                    #service__work {
-                        margin-left: 50px !important;
-                    }
-                    #icon__boulevard {
-                        margin-left: 50px !important;
-                    }
-                    #getin__touch {
-                        width: 50% !important;
-                        margin-left: 720px !important;
-                        margin-top: -70px !important;
+                        margin-left: 10px !important;
                     }
                 }
                 
