refs task [FE] Create Agency Page

--- a/assets/style/eee.css
+++ b/assets/style/eee.css
@@ -833,3 +833,47 @@
             margin-top: -130px;
         }
     }
+    /* .about__footer a {
+                                            font-family: Poppins;
+                                            font-style: normal;
+                                            font-weight: 600;
+                                            font-size: 18px;
+                                            line-height: 27px;
+                                            align-items: center;
+                                            color: #FFFFFF;
+                                        } */
+    /* .jurnal a {
+                                            width: 59px;
+                                            height: 27px;
+                                            font-family: Poppins;
+                                            font-style: normal;
+                                            font-weight: 600;
+                                            font-size: 18px;
+                                            line-height: 27px;
+                                            align-items: center;
+                                            color: #FFFFFF;
+                                        }
+                                        
+                                        #service__work {
+                                            max-width: 86px !important;
+                                            height: 74px !important;
+                                            margin-left: 135px;
+                                        }
+                                        
+                                        #icon__boulevard {
+                                            display: flex !important;
+                                            width: 230px!important;
+                                            height: 81px !important;
+                                            padding: 0 !important;
+                                            margin-left: 135px;
+                                        }
+                                        
+                                        #getin__touch {
+                                            max-width: 171px !important;
+                                            height: 55px !important;
+                                            margin-left: 157px;
+                                        }
+                                        
+                                        .get {
+                                            color: #fff !important;
+                                        } */
