--- a/assets/style/responsive.css
+++ b/assets/style/responsive.css
@@ -9,11 +9,13 @@
                 }
                 
                 @media (max-width: 991px) {
-                    .navbar:not(.top-nav-collapse) {}
+                    .navbar:not(.top-nav-collapse) {
+                        background: #1C1C1C !important;
+                    }
                 }
                 
                 .btn-white {
-                    color: black !important;
+                    color: #1C1C1C!important;
                 }
                 
                 h6 {
