refs task [FE] Create Agency Page

--- a/assets/style/foptimal.css
+++ b/assets/style/foptimal.css
@@ -292,7 +292,7 @@
                                                     }
                                                     
                                                     .text__center {
-                                                        border-bottom: 2px solid #dda0a0;
+                                                        border-bottom: 2px solid #FFFFFF;
                                                         margin-top: 40px;
                                                     }
                                                     
